--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
 					</li>
 					{% endfor %}
 				</ul>
-				{% include socials.html %}
+				{% include_cached socials.html %}
 			</div>
 		</div>
 
