--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -69,6 +69,7 @@ search.start();
 }
 .post-item {
   margin-bottom: 30px;
+  margin-left: 1%;
 }
 .post-link .ais-Highlight {
   color: #111;
@@ -94,5 +95,14 @@ search.start();
 }
 .post-snippet img {
   display: none;
+}
+p:first-child, ul:first-child, ol:first-child {
+	margin-bottom: 1%;
+}
+h2 {
+  margin-left: 1%;
+}
+.post-snippet{
+
 }
 </style>
