--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -62,14 +62,15 @@ search.start();
 
 <style>
 .ais-search-box {
-  max-width: 95%;
-  margin-bottom: 15px;
+  max-width: 80%;
+  margin-bottom: 4%;
   margin-top: 1%;
-  margin-left: 2.5%;
+  margin-left: 10.5%;
 }
 .post-item {
-  margin-bottom: 30px;
-  margin-left: 1%;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  text-align: center;
 }
 .post-link .ais-Highlight {
   color: #111;
@@ -99,10 +100,5 @@ search.start();
 p:first-child, ul:first-child, ol:first-child {
 	margin-bottom: 1%;
 }
-h2 {
-  margin-left: 1%;
-}
-.post-snippet{
 
-}
 </style>
