--- a/_includes/socials.html
+++ b/_includes/socials.html
@@ -6,8 +6,7 @@
 			<i class="fab fa-{{ url[0] | replace: 'facebook', 'facebook-f' | remove: '_url' }}" aria-hidden="true"></i>
 		</a>
 	</li>
-	{% endif %}
-	{% elif url[1] = 'https://boris.budini.xyz/search' %}
+	{% elsif url[1] = 'https://boris.budini.xyz/search' %}
 	<li class="socials__item">
 		<a href="{{ url[1] }}" class="socials__item__link" title="{{ url[0] | remove: '_url' | replace: '-', ' ' | capitalize }}">
 			<i class="fab fa-{{ url[0] | replace: 'facebook', 'facebook-f' | remove: '_url' }}" aria-hidden="true"></i>
