--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,7 +102,8 @@
 	<!-- Extra Footer JS Code -->
 	{{ site.data.settings.advanced_settings.footer_js }}
 	{% endif %}
-
+	
+<script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </body>
 
