--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	{{ site.data.settings.basic_settings.site_title }}
 
 	- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-  	
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
@@ -97,6 +97,7 @@
 	<!-- Javascript Assets -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="/js/journal-min.js?{{site.time | date: '%s%N'}}"></script>
+  <script src="/search.js"></script>
 
 	{% if site.data.settings.advanced_settings.footer_js %}
 	<!-- Extra Footer JS Code -->
