--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 	<meta property="og:type" content="website">
 	{% if site.data.settings.font_settings.font_embed %}
 	<!-- Font Embed Code -->
-	{{ site.data.settings.font_settings.font_embed }}?{{site.time | date: '%s%N'}}
+	{{ site.data.settings.font_settings.font_embed }}?
 	{% endif %}
 
 	<!-- Styles -->
