--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,7 @@
 	<meta property="og:image" content="{{ site.url }}{{ page.featured_image }}" />
 	<meta property="og:url" content="{{ site.url }}">
 	<meta property="og:type" content="website">
-	{% if site.data.settings.font_settings.font_embed %}
-	<!-- Font Embed Code -->
-	{{ site.data.settings.font_settings.font_embed }}?
-	{% endif %}
+  <link href="/css/font.css?{{site.time | date: '%s%N'}}" rel="stylesheet">
 
 	<!-- Styles -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
