--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 	<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt }}{% endif %}">
 
 
-  <link href="/css/font.css?{{site.time | date: '%s%N'}}" rel="stylesheet">
+  <link href="/assets/css/font.css?{{site.time | date: '%s%N'}}" rel="stylesheet">
 
 	<!-- Styles -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
