Add mastodon rel me

--- a/_includes/socials.html
+++ b/_includes/socials.html
@@ -8,4 +8,10 @@
 	</li>
 	{% endif %}
 	{% endfor %}
+		<li class="socials__item">
+			<a rel="me" href="https://fosstodon.org/@kominoshja" target="_blank" class="socials__item__link" title="Mastodon">
+				<i class="fab fa-mastodon" aria-hidden="true"></i>
+			</a>
+		</li>
+	<a ></a>
 </ul>
